# raspicat_setup_scripts

./: CMakeLists.txt  package.xml
device_driver_auto_install/: setup_raspicat.sh
device_driver_auto_install/etc/systemd/system/: raspicat.service.ubuntu
device_driver_auto_install/scripts/: insmod_rtmouse.sh  install.sh
ether_lidar/scripts/: setup.sh
external_ssd/scripts/: setup.sh
hotspot/scripts/: install.sh  raspicat_hotspot.sh
hotspot/service/: raspicat_hotspot.service
raspicat_device_driver_auto_install/: CMakeLists.txt  package.xml  setup_raspicat.sh
raspicat_device_driver_auto_install/src/: install.sh  uninstall.sh
raspicat_ether_lidar/: CMakeLists.txt  package.xml
raspicat_external_ssd/: CMakeLists.txt  package.xml
raspicat_external_ssd_set_up/: CMakeLists.txt  package.xml
raspicat_hotspot/: CMakeLists.txt  install.sh  package.xml
raspicat_hotspot/scripts/: raspicat_hotspot.sh
raspicat_hotspot/service/: raspicat_hotspot.service
raspicat_ros_install/: CMakeLists.txt  package.xml
raspicat_ros_install/noetic/: ros_noetic_desktop_install.sh  ros_noetic_server_install.sh
raspicat_setup_scripts/: CMakeLists.txt  package.xml
raspicat_switch_control/: CMakeLists.txt  package.xml
raspicat_switch_control/scripts/: SW0.sh  SW1.sh  SW2.sh  raspicat_switch_control.sh
raspicat_switch_control/service/: raspicat_switch_control.service
raspicat_time_synchronization/: CMakeLists.txt  package.xml
raspicat_time_synchronization/scripts/: setup_remote_pc.sh
raspicat_usb_audio/: CMakeLists.txt  package.xml
raspicat_usb_audio_set_up/: CMakeLists.txt  package.xml
raspicat_usb_audio_set_up/scripts/: setup.sh
src/: install.sh
switch_control/: install.sh
time_synchronization/scripts/: setup_raspi.sh  setup_remote_pc.sh
(+1 files in other folders)
