<?xml version="1.0"?>
<package format="2">
  <name>raspicat_ros_install</name>
  <version>0.0.0</version>
  <description>The raspicat_ros_install package</description>

  <maintainer email="beike315@icloud.com">Tatsuhiro Ikebe</maintainer>

  <license>Apache-2.0</license>

  <buildtool_depend>catkin</buildtool_depend>
</package>