<?xml version="1.0"?>
<package format="2">
  <name>raspicat_setup_scripts</name>
  <version>0.0.0</version>
  <description>The raspicat_setup_scripts meta package</description>

  <maintainer email="beike315@icloud.com">Tatsuhiro Ikebe</maintainer>

  <license>Apache-2.0</license>

  <buildtool_depend>catkin</buildtool_depend>
  <exec_depend>raspicat_device_driver_auto_install</exec_depend>
  <exec_depend>raspicat_hotspot</exec_depend>
  <exec_depend>raspicat_ros_install</exec_depend>
  <exec_depend>raspicat_switch_control</exec_depend>

  <export>
    <metapackage/>
  </export>
</package>